--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,10 +17,10 @@
 <script type="importmap">
 {
   "imports": {
-    "react": "https://aistudiocdn.com/react@^19.1.1",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-    "react/": "https://aistudiocdn.com/react@^19.1.1/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.17.0"
+    "react": "https://esm.sh/react@19.1.1",
+    "react-dom/": "https://esm.sh/react-dom@19.1.1/",
+    "react/": "https://esm.sh/react@19.1.1/",
+    "@google/genai": "https://esm.sh/@google/genai@1.17.0"
   }
 }
 </script>
